--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -171,6 +171,9 @@
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
     "message": "Ghostery блокирует трекеры и предотвращает профилирование и продажу ваших данных брокерам."
   },
+  "ghostery_paused": {
+    "message": "Ghostery сделал паузу"
+  },
   "ghostery_privacy_policy": {
     "message": "Политика конфиденциальности Ghostery"
   },
@@ -256,6 +259,9 @@
   },
   "on_this_website": {
     "message": "на этом веб-сайте"
+  },
+  "pause_on_this_site": {
+    "message": "Пауза на этом сайте"
   },
   "paused": {
     "message": "Paused"
@@ -347,9 +353,6 @@
   },
   "website": {
     "message": "Website"
-  },
-  "website__@_0__": {
-    "message": "Website ($${0})"
   },
   "websites": {
     "message": "Websites"
