--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -1,12 +1,12 @@
 {
   "@_0__left": {
-    "message": "$${0} left"
+    "message": "剩余 $${0} 个"
   },
   "1_day": {
-    "message": "1 day"
+    "message": "1 天"
   },
   "1_hour": {
-    "message": "1 hour"
+    "message": "1 小时"
   },
   "about": {
     "message": "关于"
@@ -35,7 +35,7 @@
     "message": "所有弹出窗口"
   },
   "always": {
-    "message": "Always"
+    "message": "始终"
   },
   "anti_tracking": {
     "message": "反跟踪功能"
@@ -47,7 +47,7 @@
     "message": "应用最佳隐私设置："
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
-    "message": "Are you sure you want to disable Trackers Preview?"
+    "message": "确定要禁用跟踪器预览吗？"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "确定要跳过启用 Ghostery 吗？"
@@ -79,7 +79,7 @@
     "message": "查看<a href=\"$${0}\" target=\"_blank\">常见问题解答</a>或发送邮件至 <a href=\"mailto:$${1}\">$${2}< /a>。 <br/>我们非常乐意与您交谈！"
   },
   "clear_all": {
-    "message": "Clear all"
+    "message": "全部清除"
   },
   "comments": {
     "message": "评论",
@@ -90,16 +90,16 @@
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "contact": {
-    "message": "Contact"
+    "message": "联系"
   },
   "contact_support": {
-    "message": "Contact support"
+    "message": "联系支持人员"
   },
   "continue": {
     "message": "继续"
   },
   "copied_to_clipboard": {
-    "message": "Copied to clipboard"
+    "message": "已复制到剪贴板"
   },
   "customer_interaction": {
     "message": "客户互动",
@@ -109,13 +109,13 @@
     "message": "详细视图"
   },
   "disable": {
-    "message": "Disable"
+    "message": "禁用"
   },
   "disable_trackers_preview": {
     "message": "禁用跟踪器预览"
   },
   "disabled": {
-    "message": "Disabled"
+    "message": "已禁用"
   },
   "done": {
     "message": "完成"
@@ -157,13 +157,13 @@
     "message": "Ghostery 已启用"
   },
   "ghostery_has_been_resumed_on_this_site_": {
-    "message": "Ghostery has been resumed on this site."
+    "message": "Ghostery 已在此网站上恢复。"
   },
   "ghostery_has_nothing_to_do_on_this_page": {
-    "message": "Ghostery has nothing to do on this page"
+    "message": "Ghostery 在此页面上没有作用"
   },
   "ghostery_is_paused_on_this_site_": {
-    "message": "Ghostery is paused on this site."
+    "message": "Ghostery 已在此网站上暂停。"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery 是为了在浏览时阻止跟踪器并保护您的隐私！"
@@ -171,20 +171,23 @@
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
     "message": "Ghostery 正在阻止跟踪器的踪迹，并防止他人分析您的特征并将您的个人信息出售给数据中介。"
   },
+  "ghostery_paused": {
+    "message": "Ghostery暂停了"
+  },
   "ghostery_privacy_policy": {
     "message": "Ghostery 隐私政策"
   },
   "ghostery_settings": {
-    "message": "Ghostery settings"
+    "message": "Ghostery 设置"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery settings to stop trackers and ads from tracking you around the web"
+    "message": "Ghostery 将在此网站上暂停。 为阻止跟踪器和广告在网络上跟踪您，您可以在 Ghostery 设置中更改此设置。"
   },
   "ghostery_will_be_paused_on_this_site_for_1_day": {
-    "message": "Ghostery will be paused on this site for 1 day"
+    "message": "Ghostery 将在此网站上暂停 1 天"
   },
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
-    "message": "Ghostery will be paused on this site for 1 hour"
+    "message": "Ghostery 将在此网站上暂停 1 小时"
   },
   "hosting": {
     "message": "托管",
@@ -209,10 +212,10 @@
     "message": "Ghostery 是强大的隐私保护扩展程序。拦截广告，停止跟踪器，提高网站速度。"
   },
   "menu": {
-    "message": "Menu"
+    "message": "菜单"
   },
   "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+    "message": "请注意，列出的实体并不全都是跟踪器，并非所有实体都收集个人数据"
   },
   "miscellaneous": {
     "message": "其他",
@@ -237,7 +240,7 @@
     "message": "否"
   },
   "no_trackers_detected": {
-    "message": "No trackers detected"
+    "message": "未检测到跟踪器"
   },
   "off": {
     "message": "关闭"
@@ -257,11 +260,14 @@
   "on_this_website": {
     "message": "在此网站上"
   },
+  "pause_on_this_site": {
+    "message": "在这个网站上暂停"
+  },
   "paused": {
-    "message": "Paused"
+    "message": "已暂停"
   },
   "permission_required": {
-    "message": "Permission required"
+    "message": "需要权限"
   },
   "privacy_policy": {
     "message": "隐私政策"
@@ -270,10 +276,10 @@
     "message": "隐私政策"
   },
   "privacy_protection": {
-    "message": "Privacy protection"
+    "message": "隐私保护"
   },
   "read_more_on_whotracks_me": {
-    "message": "Read more on WhoTracks.Me"
+    "message": "在 WhoTracks.Me 上了解详情"
   },
   "report_a_broken_page": {
     "message": "报告崩溃页面"
@@ -282,7 +288,7 @@
     "message": "继续"
   },
   "search_website___": {
-    "message": "Search website..."
+    "message": "搜索网站..."
   },
   "settings": {
     "message": "设置"
@@ -321,10 +327,10 @@
     "message": "跟踪器"
   },
   "trackers_count": {
-    "message": "Trackers Count"
+    "message": "跟踪器数量"
   },
   "trackers_detected": {
-    "message": "Trackers detected"
+    "message": "检测到跟踪器"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Ghostery 在此网站上检测到的跟踪器：$${0}"
@@ -333,10 +339,10 @@
     "message": "跟踪器预览"
   },
   "trackers_wheel": {
-    "message": "Trackers Wheel"
+    "message": "跟踪器轮"
   },
   "try_to_open_this_panel_on_a_different_browser_tab": {
-    "message": "Try to open this panel on a different browser tab"
+    "message": "尝试在其他浏览器标签页中打开此面板"
   },
   "unblocked": {
     "message": "未拦截"
@@ -346,13 +352,10 @@
     "description": "Tracker category name"
   },
   "website": {
-    "message": "Website"
-  },
-  "website__@_0__": {
-    "message": "Website ($${0})"
+    "message": "网站"
   },
   "websites": {
-    "message": "Websites"
+    "message": "网站"
   },
   "welcome_to_ghostery": {
     "message": "欢迎使用 Ghostery"
@@ -364,10 +367,10 @@
     "message": "WhoTracks.Me 由 Ghostery 运营，是 Ghostery 人工智能反跟踪技术不可或缺的一部分。 WhoTracks.me 是全球最全面的跟踪器资源，为网络跟踪带来透明度。"
   },
   "whotracks_me_statistical_report": {
-    "message": "WhoTracks.Me Statistical Report"
+    "message": "WhoTracks.Me 统计报告"
   },
   "whotracks_me_wheel": {
-    "message": "WhoTracks.Me Wheel"
+    "message": "WhoTracks.Me 轮"
   },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "启用 Ghostery 后，您可以立即更安全、更快速地浏览网页，并减少恼人的广告。"
@@ -388,6 +391,6 @@
     "message": "Ghostery，一切准备就绪！"
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
-    "message": "You will no longer see tracker wheels next to the search results."
+    "message": "搜索结果旁将不再显示跟踪器轮。"
   }
 }
