--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -123,6 +123,9 @@
   "done__go_with_ghosty_": {
     "message": "完成！ 跟 Ghosty 一起去！"
   },
+  "eliminates_ads_on_websites_you_visit__offering_a_calm__safe_and_private_internet_": {
+    "message": "Eliminates ads on websites you visit, offering a calm, safe and private internet."
+  },
   "email": {
     "message": "電郵",
     "description": "Tracker category name"
@@ -177,6 +180,12 @@
   "ghostery_privacy_policy": {
     "message": "Ghostery 隱私權政策"
   },
+  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collectors__from_ads_to_trackers_and_cookie_popups_": {
+    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collectors, from ads to trackers and cookie popups."
+  },
+  "ghostery_s_ai_driven_anti_tracking_technology_prevents_various_tracking_techniques_securing_your_digital_privacy_while_browsing_the_web_": {
+    "message": "Ghostery’s AI driven Anti-Tracking technology prevents various tracking techniques securing your digital privacy while browsing the web."
+  },
   "ghostery_settings": {
     "message": "Ghostery 設定"
   },
@@ -205,7 +214,7 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "讓 Ghostery 成為你的全面隱私倡議者，拒絕所有彈出式視窗和追蹤，或者你自己動手！"
   },
-	"manifest_name": {
+  "manifest_name": {
     "message": "Ghostery – 隱私廣告攔截器"
   },
   "manifest_short_description": {
@@ -281,6 +290,12 @@
   "read_more_on_whotracks_me": {
     "message": "在 WhoTracks.Me 上繼續閱讀"
   },
+  "removes_intrusive_cookie_popups_and_expresses_dissent_to_online_tracking__you_can_browse_the_web_without_worrying_about_cookie_consent_dialogues_or_privacy_violations_": {
+    "message": "Removes intrusive cookie popups and expresses dissent to online tracking. You can browse the web without worrying about cookie consent dialogues or privacy violations."
+  },
+  "replaces_ghostery_icon_in_the_browser_toolbar": {
+    "message": "Replaces Ghostery icon in the browser toolbar"
+  },
   "report_a_broken_page": {
     "message": "報告已損毀的網頁"
   },
@@ -292,6 +307,12 @@
   },
   "settings": {
     "message": "設定"
+  },
+  "show_tracker_count_badge_on_the_ghostery_icon_in_browser_toolbar": {
+    "message": "在網頁瀏覽器工具欄上顯示網頁跟蹤器點算方塊"
+  },
+  "shows_statistical_information_about_website_tracking_on_search_engine_result_page": {
+    "message": "Shows statistical information about website tracking on search engine result page"
   },
   "sign_in": {
     "message": "登入"
@@ -309,6 +330,9 @@
   "social_media": {
     "message": "社交媒體",
     "description": "Tracker category name"
+  },
+  "software_licenses": {
+    "message": "軟體准許證"
   },
   "submit_a_new_tracker": {
     "message": "提交一個新的網頁跟蹤器"
@@ -363,6 +387,9 @@
   "what_is_whotracks_me_": {
     "message": "什么是 WhoTracks.Me？"
   },
+  "when_pausing_ghostery_on_individual_websites_for_various_personal_reasons__those_websites_will_appear_here_": {
+    "message": "When pausing Ghostery on individual websites for various personal reasons, those websites will appear here."
+  },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me 由 Ghostery 營運，是 Ghostery 人工智慧反追蹤技術不可或缺的一部分。 它是有關追蹤器的綜合性全球資源，使網路追蹤透明化。"
   },
@@ -383,6 +410,9 @@
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
     "message": "你可以隨時改變主意並啟用 Ghostery，以在 Ghostery 面板中開始追蹤追蹤器。"
+  },
+  "you_can_manage_the_functionality_of_these_privacy_components_to_your_liking__we_recommend_keeping_them_on_at_all_times_": {
+    "message": "You can manage the functionality of these privacy components to your liking. We recommend keeping them ON at all times."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "你選擇跳過啟用 Ghostery！"
