--- a/extension-manifest-v3/src/_locales/hu/messages.json
+++ b/extension-manifest-v3/src/_locales/hu/messages.json
@@ -341,7 +341,7 @@
   "unblocked": {
     "message": "Feloldva"
   },
-  "unknown": {
+  "unidentified": {
     "message": "Ismeretlen",
     "description": "Tracker category name"
   },
