--- a/extension-manifest-v3/src/_locales/vi/messages.json
+++ b/extension-manifest-v3/src/_locales/vi/messages.json
@@ -187,7 +187,7 @@
    "are_you_sure_": {
      "message": "Bạn chắc chứ?"
    },
-   "unknown": {
+   "unidentified": {
      "message": "Không xác định",
      "description": "Ghostery tổ chức các thẻ theo thể loại.  Đây là một trong một số loại thẻ."
    },
