--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -537,16 +537,13 @@
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "Telemetry"
+    "message": "Gather information about user interaction, error reports and performance. Data is used to improved products and should shared with 3rd parties."
   },
-  "category_uncategorized": {
+  "category_unidentified": {
     "message": "Uncategorized"
   },
-  "category_uncategorized_desc": {
+  "category_unidentified_desc": {
     "message": "These trackers have not been categorized yet."
-  },
-  "category_unknown": {
-    "message": "Unknown"
   },
   "cdn": {
     "message": "CDN",
