--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -365,7 +365,7 @@
   "try_to_open_this_panel_on_a_different_browser_tab": {
     "message": "Essayez d'ouvrir ce panneau dans un autre onglet du navigateur"
   },
-  "unknown": {
+  "unidentified": {
     "message": "Inconnu",
     "description": "Tracker category name"
   },
