--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -365,7 +365,7 @@
   "try_to_open_this_panel_on_a_different_browser_tab": {
     "message": "このパネルを別のブラウザのタブで開いてください"
   },
-  "unknown": {
+  "unidentified": {
     "message": "未知",
     "description": "Tracker category name"
   },
