--- a/extension-manifest-v3/src/_locales/nl/messages.json
+++ b/extension-manifest-v3/src/_locales/nl/messages.json
@@ -341,7 +341,7 @@
   "unblocked": {
     "message": "Gedeblokkeerd"
   },
-  "unknown": {
+  "unidentified": {
     "message": "Onbekend",
     "description": "Tracker category name"
   },
