--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -365,7 +365,7 @@
   "try_to_open_this_panel_on_a_different_browser_tab": {
     "message": "Try to open this panel on a different browser tab"
   },
-  "unknown": {
+  "unidentified": {
     "message": "Неизвестный",
     "description": "Tracker category name"
   },
