--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -365,7 +365,7 @@
   "try_to_open_this_panel_on_a_different_browser_tab": {
     "message": "尝试在其他浏览器标签页中打开此面板"
   },
-  "unknown": {
+  "unidentified": {
     "message": "未知",
     "description": "Tracker category name"
   },
